--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -133,7 +133,7 @@
         android:layout_below="@id/cartitem_desc_layout"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="@dimen/verticalspacing_8dp"
-        android:background="@color/staples_off_white"
+        android:background="@color/staples_horizontal_rule"
         android:visibility="gone"/>
 
 </RelativeLayout>
