--- a/app/src/main/res/layout/coupon_item_redeemable_heading.xml
+++ b/app/src/main/res/layout/coupon_item_redeemable_heading.xml
@@ -14,7 +14,7 @@
         android:id="@+id/rewards_horizontal_rule"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/staples_off_white"/>
+        android:background="@color/staples_horizontal_rule"/>
 
     <TextView
         style="@style/GraySubheading"
