--- a/app/src/main/res/layout/order_fragment.xml
+++ b/app/src/main/res/layout/order_fragment.xml
@@ -84,7 +84,7 @@
             android:layout_height="1dp"
             android:layout_marginTop="6dp"
             android:layout_marginBottom="6dp"
-            android:background="@color/staples_off_white" />
+            android:background="@color/staples_horizontal_rule" />
 
         <!-- delivery info -->
         <TextView
