--- a/app/src/main/res/layout/weekly_ad_categories_item.xml
+++ b/app/src/main/res/layout/weekly_ad_categories_item.xml
@@ -5,8 +5,11 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    card_view:cardCornerRadius="4dp"
-    android:layout_margin="2dp">
+    card_view:cardCornerRadius="2dp"
+    card_view:cardElevation="2dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginTop="@dimen/verticalspacing_8dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
