--- a/app/src/main/res/layout/coupon_item_applied.xml
+++ b/app/src/main/res/layout/coupon_item_applied.xml
@@ -20,11 +20,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minWidth="100dp"
+            android:textSize="@dimen/fontsize_16sp"
+            android:textColor="@color/staples_black"
             />
         <TextView
             android:id="@+id/coupon_item_field2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/fontsize_16sp"
+            android:textColor="@color/staples_black"
             />
     </LinearLayout>
 
