--- a/app/src/main/res/layout/coupon_item_redeemable.xml
+++ b/app/src/main/res/layout/coupon_item_redeemable.xml
@@ -21,11 +21,16 @@
             android:id="@+id/coupon_item_field1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/fontsize_16sp"
+            android:textColor="@color/staples_black"
             android:minWidth="100dp"/>
         <TextView
             android:id="@+id/coupon_item_field2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fontsize_16sp"
+            android:textColor="@color/staples_black"
+            />
     </LinearLayout>
 
     <!--ADD button-->
