--- a/app/src/main/res/layout/rewards_ink_recycling.xml
+++ b/app/src/main/res/layout/rewards_ink_recycling.xml
@@ -8,8 +8,10 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:contentPadding="6dp"
-    card_view:cardCornerRadius="4dp"
+    card_view:contentPadding="@dimen/margin_16dp"
+    card_view:cardCornerRadius="2dp"
+    card_view:cardElevation="2dp"
+    card_view:cardBackgroundColor="@color/staples_white"
     >
 
     <LinearLayout
@@ -29,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:paddingRight="6dp"
                 android:textSize="@dimen/fontsize_30sp"
-                android:textColor="@color/staples_middle_gray"/>
+                android:textColor="@color/staples_dark_gray"/>
             <TextView
                 android:id="@+id/cartridges_recycled_label"
                 android:layout_width="wrap_content"
@@ -44,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/fontsize_16sp"
-            android:textColor="@color/staples_middle_gray"/>
+            android:textColor="@color/staples_dark_gray"/>
 
         <!--ink cartridges earned-->
         <LinearLayout
@@ -59,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:paddingRight="6dp"
                 android:textSize="@dimen/fontsize_30sp"
-                android:textColor="@color/staples_middle_gray"/>
+                android:textColor="@color/staples_dark_gray"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -74,7 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/fontsize_16sp"
-            android:textColor="@color/staples_middle_gray"/>
+            android:textColor="@color/staples_dark_gray"/>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
