--- a/app/src/main/res/layout/rewards_summary.xml
+++ b/app/src/main/res/layout/rewards_summary.xml
@@ -7,15 +7,18 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/staples_off_white">
 
     <!--ytd savings-->
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        card_view:contentPadding="6dp"
-        card_view:cardCornerRadius="4dp"
+        android:layout_marginBottom="@dimen/verticalspacing_8dp"
+        card_view:contentPadding="@dimen/margin_16dp"
+        card_view:cardCornerRadius="2dp"
+        card_view:cardElevation="2dp"
+        card_view:cardBackgroundColor="@color/staples_white"
         >
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
@@ -32,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/fontsize_30sp"
-                android:textColor="@color/staples_middle_gray"/>
+                android:textColor="@color/staples_dark_gray"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
@@ -41,8 +44,11 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:contentPadding="6dp"
-        card_view:cardCornerRadius="4dp"
+        android:layout_marginBottom="@dimen/verticalspacing_8dp"
+        card_view:contentPadding="@dimen/margin_16dp"
+        card_view:cardCornerRadius="2dp"
+        card_view:cardElevation="2dp"
+        card_view:cardBackgroundColor="@color/staples_white"
         >
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
@@ -59,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/fontsize_30sp"
-                android:textColor="@color/staples_middle_gray"/>
+                android:textColor="@color/staples_dark_gray"/>
             <ProgressBar
                 android:id="@+id/ytd_progress"
                 android:layout_width="match_parent"
@@ -73,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="4dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/staples_middle_gray"/>
+                android:textColor="@color/staples_dark_gray"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
