--- a/app/src/main/res/layout/rewards_ink_recycling.xml
+++ b/app/src/main/res/layout/rewards_ink_recycling.xml
@@ -53,7 +53,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="20dp"
+            android:paddingTop="@dimen/verticalspacing_24dp"
             >
             <TextView
                 android:id="@+id/cartridges_earned"
