--- a/app/src/main/res/layout/rewards_summary.xml
+++ b/app/src/main/res/layout/rewards_summary.xml
@@ -34,6 +34,7 @@
                 android:id="@+id/total_ytd_savings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingTop="@dimen/verticalspacing_8dp"
                 android:textSize="@dimen/fontsize_30sp"
                 android:textColor="@color/staples_dark_gray"/>
         </LinearLayout>
@@ -64,6 +65,7 @@
                 android:id="@+id/ytd_spend_goal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingTop="@dimen/verticalspacing_8dp"
                 android:textSize="@dimen/fontsize_30sp"
                 android:textColor="@color/staples_dark_gray"/>
             <ProgressBar
@@ -77,7 +79,7 @@
                 android:id="@+id/ytd_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="4dp"
+                android:paddingTop="@dimen/verticalspacing_8dp"
                 android:textSize="@dimen/fontsize_16sp"
                 android:textColor="@color/staples_dark_gray"/>
         </LinearLayout>
