rewards linking margins/spacing

--- a/app/src/main/res/layout/rewards_linking.xml
+++ b/app/src/main/res/layout/rewards_linking.xml
@@ -8,7 +8,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="6dp"
+    android:padding="@dimen/margin_16dp"
     >
     <!--android:visibility="gone"-->
     <!--android:background="@color/background_extra_light_gray"-->
@@ -17,15 +17,19 @@
         android:id="@+id/link_rewards_heading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:textSize="@dimen/fontsize_20sp"
+        android:textColor="@color/staples_black"
         android:text="@string/link_rewards_account"
         />
     <EditText
         android:id="@+id/rewards_card_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_below="@id/link_rewards_heading"
+        android:layout_marginTop="@dimen/verticalspacing_8dp"
         android:hint="@string/rewards_card_number"
         android:inputType="number"
         android:imeOptions="actionNext"
@@ -34,7 +38,9 @@
         android:id="@+id/rewards_phone_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_below="@id/rewards_card_number"
+        android:layout_marginTop="@dimen/verticalspacing_8dp"
         android:hint="@string/rewards_phone_number"
         android:inputType="phone"
         android:imeOptions="actionDone"
@@ -43,10 +49,12 @@
         android:id="@+id/rewards_link_acct_button"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:layout_marginTop="@dimen/verticalspacing_8dp"
         android:layout_below="@id/rewards_phone_number"
         android:layout_alignParentRight="true"
         android:text="@string/link_account"
         android:textSize="@dimen/fontsize_16sp"
+        android:textColor="@color/staples_white"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
