--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -251,7 +251,7 @@
             android:layout_height="36dp"
             android:layout_below="@id/cart_subtotal"
             android:layout_marginTop="@dimen/verticalspacing_8dp"
-            android:layout_marginBottom="@dimen/verticalspacing_8dp"
+            android:layout_marginBottom="@dimen/margin_16dp"
             android:padding="0dp"
             card_view:cardCornerRadius="1dp"
             card_view:cardElevation="0dp"
