--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -23,7 +23,7 @@
         android:paddingLeft="@dimen/margin_16dp"
         android:paddingRight="@dimen/margin_16dp"
         android:paddingTop="@dimen/verticalspacing_8dp"
-        android:paddingBottom="@dimen/verticalspacing_8dp"
+        android:paddingBottom="@dimen/margin_16dp"
         android:background="@color/staples_middle_gray">
 
     <!--&lt;!&ndash; delivery range &ndash;&gt;-->
