--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,8 @@
     <style name="ActionBarBadgeStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">16dp</item>
-        <item name="android:layout_marginRight">16dp</item>
+        <item name="android:paddingLeft">@dimen/action_bar_quarter_margin</item>
+        <item name="android:paddingRight">@dimen/action_bar_quarter_margin</item>
         <item name="android:textSize">@dimen/fontsize_11sp</item>
         <item name="android:textColor">@color/staples_white</item>
         <item name="circleColor">@color/staples_red</item>
@@ -17,31 +17,31 @@
     <style name="ActionBarButtonStyle" parent="android:Widget.Button">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">4dp</item>
-        <item name="android:layout_marginRight">4dp</item>
+        <item name="android:layout_marginLeft">@dimen/action_bar_half_margin</item>
+        <item name="android:layout_marginRight">@dimen/action_bar_half_margin</item>
         <item name="android:textSize">@dimen/fontsize_20sp</item>
         <item name="android:visibility">gone</item>
     </style>
     <style name="ActionBarIconStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingLeft">16dp</item>
-        <item name="android:paddingRight">16dp</item>
+        <item name="android:paddingLeft">@dimen/action_bar_quarter_margin</item>
+        <item name="android:paddingRight">@dimen/action_bar_quarter_margin</item>
         <item name="android:visibility">gone</item>
     </style>
     <style name="ActionBarSearchStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:layout_marginLeft">4dp</item>
-        <item name="android:layout_marginRight">4dp</item>
+        <item name="android:layout_marginLeft">@dimen/action_bar_half_margin</item>
+        <item name="android:layout_marginRight">@dimen/action_bar_half_margin</item>
         <item name="android:visibility">gone</item>
     </style>
     <style name="ActionBarTextStyle" parent="android:Widget.TextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">4dp</item>
-        <item name="android:layout_marginRight">4dp</item>
+        <item name="android:layout_marginLeft">@dimen/action_bar_half_margin</item>
+        <item name="android:layout_marginRight">@dimen/action_bar_half_margin</item>
         <item name="android:textSize">@dimen/fontsize_20sp</item>
         <item name="android:lines">1</item>
         <item name="android:ellipsize">end</item>
@@ -56,19 +56,21 @@
     <style name="SortOptionStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">32sp</item>
-        <item name="android:paddingLeft">8dp</item>
-        <item name="android:paddingRight">8dp</item>
+        <item name="android:paddingLeft">@dimen/action_bar_half_margin</item>
+        <item name="android:paddingRight">@dimen/action_bar_half_margin</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:button">@drawable/radio_button_white</item>
         <item name="android:lines">1</item>
-        <item name="android:typeface">serif</item>
         <item name="android:textSize">@dimen/fontsize_14sp</item>
         <item name="android:textColor">@color/staples_white</item>
     </style>
 
     <style name="DrawerStyle">
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:paddingLeft">@dimen/action_bar_half_margin</item>
+        <item name="android:paddingRight">@dimen/action_bar_half_margin</item>
         <item name="android:textSize">@dimen/fontsize_14sp</item>
         <item name="android:textColor">@color/staples_black</item>
     </style>
