--- a/app/src/main/res/layout/drawer_account.xml
+++ b/app/src/main/res/layout/drawer_account.xml
@@ -1,37 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="72dp"
-        android:layout_marginTop="7dp"
-        android:background="@color/staples_middle_gray"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/title"
-            style="@style/DrawerStyle"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_marginLeft="72dp"
-            android:textSize="@dimen/fontsize_11sp"
-            android:textColor="@color/staples_middle_gray"
-            android:textAllCaps="true"/>
-        <ImageView
-            android:id="@+id/icon"
-            style="@style/DrawerStyle"
-            android:layout_marginRight="16dp"
-            android:layout_width="wrap_content"/>
-        <TextView
-            android:id="@+id/account_option"
-            android:layout_marginRight="16dp"
-            style="@style/DrawerStyle"
-            android:layout_width="wrap_content"
-            android:text="@string/login_title"/>
-    </LinearLayout>
+    android:layout_height="48dp"
+    android:orientation="horizontal"
+    android:paddingLeft="@dimen/action_bar_half_margin"
+    android:paddingRight="@dimen/action_bar_half_margin">
+    <ImageView
+        android:id="@+id/icon"
+        style="@style/DrawerStyle"
+        android:paddingLeft="@dimen/action_bar_quarter_margin"
+        android:paddingRight="@dimen/action_bar_quarter_margin"/>
+    <TextView
+        android:id="@+id/title"
+        style="@style/DrawerStyle"
+        android:layout_width="0dp"
+        android:layout_weight="1"/>
+    <TextView
+        android:id="@+id/account_option"
+        style="@style/DrawerStyle"/>
 </LinearLayout>
