--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:padding="12dp"
+        android:padding="@dimen/margin_16dp"
         android:src="@drawable/splash"
         android:background="@color/staples_white"/>
     <!-- Main screen -->
