--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -167,9 +167,9 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
 		android:paddingBottom="0dp"
+		android:paddingTop="0dp"
         android:paddingLeft="@dimen/margin_16dp"
         android:paddingRight="@dimen/margin_16dp"
-        android:paddingTop="@dimen/verticalspacing_8dp"
 		android:visibility="visible"
 	>
         <TextView
@@ -177,10 +177,10 @@
             android:layout_alignParentLeft="true"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-			android:paddingTop="0dp"
 			android:text="@string/oversized_shipping_fee"
             android:textColor="@color/staples_black"
             android:textSize="@dimen/fontsize_14sp"
+			android:visibility="gone"
         />
         <TextView
 			android:id="@+id/oversized_shipping"
@@ -188,9 +188,9 @@
             android:layout_alignParentRight="true"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-			android:text="$14.99"
             android:textColor="@color/staples_black"
             android:textSize="@dimen/fontsize_14sp"
+			android:visibility="gone"
 		/>
 
 		<TextView
@@ -199,7 +199,6 @@
 			android:layout_below="@id/oversized_shipping_label"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
-			android:paddingTop="0dp"
 			android:text="@string/shipping"
 			android:textColor="@color/staples_black"
 			android:textSize="@dimen/fontsize_14sp"
