--- a/app/src/main/res/layout/add_creditcard_fragment.xml
+++ b/app/src/main/res/layout/add_creditcard_fragment.xml
@@ -3,9 +3,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="10dip"
-    android:paddingRight="10dip"
-    android:paddingLeft="10dip">
+    android:paddingLeft="@dimen/margin_16dp"
+    android:paddingRight="@dimen/margin_16dp"
+    android:paddingTop="@dimen/verticalspacing_8dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -60,7 +60,7 @@
             android:text="@string/save_btn"
             android:id="@+id/addCCBtn"
             android:imeOptions="actionDone"
-            android:textColor="@color/staples_white"
+            android:textColor="@color/staples_black" />
             android:layout_alignParentRight="true"
             />
         <Button
@@ -69,7 +69,7 @@
             android:text="@string/cancel_btn"
             android:id="@+id/cancelCCBtn"
             android:imeOptions="actionDone"
-            android:textColor="@color/staples_white"
+            android:textColor="@color/staples_black" />
             android:layout_toLeftOf="@+id/addCCBtn"/>
         </RelativeLayout>
 </com.staples.mobile.cfa.widget.AnimatorLayout>
