--- a/app/src/main/res/layout/address_fragment.xml
+++ b/app/src/main/res/layout/address_fragment.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:orientation="vertical"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+    android:paddingLeft="@dimen/margin_16dp"
+    android:paddingRight="@dimen/margin_16dp">
 
-	<TextView android:id="@+id/autoCompleteAnchor"
-		android:layout_centerHorizontal="true"
-		android:layout_height="wrap_content"
-		android:layout_width="match_parent"
-		android:visibility="invisible"
-	/>
+    <TextView android:id="@+id/autoCompleteAnchor"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:visibility="invisible" />
 
-    <include layout="@layout/address_block"
-             android:id="@+id/shipping_address"/>
+    <include
+        android:id="@+id/shipping_address"
+        layout="@layout/address_block" />
+
     <Button
         android:id="@+id/address_save"
         android:layout_width="wrap_content"
