--- a/app/src/main/res/layout/add_creditcard_fragment.xml
+++ b/app/src/main/res/layout/add_creditcard_fragment.xml
@@ -60,16 +60,15 @@
             android:text="@string/save_btn"
             android:id="@+id/addCCBtn"
             android:imeOptions="actionDone"
-            android:textColor="@color/staples_black" />
-            android:layout_alignParentRight="true"
-            />
+			android:textColor="@color/staples_black"
+			android:layout_alignParentRight="true"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cancel_btn"
             android:id="@+id/cancelCCBtn"
             android:imeOptions="actionDone"
-            android:textColor="@color/staples_black" />
+			android:textColor="@color/staples_black"
             android:layout_toLeftOf="@+id/addCCBtn"/>
         </RelativeLayout>
 </com.staples.mobile.cfa.widget.AnimatorLayout>
