--- a/app/src/main/res/layout/personal_feed_product_item.xml
+++ b/app/src/main/res/layout/personal_feed_product_item.xml
@@ -44,8 +44,9 @@
 
     <ImageView
         android:id="@+id/arrow"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="@dimen/personal_feed_arrow"
+        android:layout_height="@dimen/personal_feed_arrow"
+        android:padding="@dimen/sku_info_padding"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:adjustViewBounds="true"
