--- a/app/src/main/res/layout/sku_detail_scroll.xml
+++ b/app/src/main/res/layout/sku_detail_scroll.xml
@@ -7,5 +7,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="6dp"/>
+        android:padding="@dimen/margin_16dp"/>
 </ScrollView>
