--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -40,6 +40,13 @@
     <dimen name="weekly_ad_category_item_image_height">100dp</dimen>
     <dimen name="personal_feed_item_image_width">120dp</dimen>
     <dimen name="personal_feed_item_image_height">120dp</dimen>
+    <dimen name="personal_feed_arrow">28dp</dimen>
+    <dimen name="sku_info_padding">2dp</dimen>
+    <dimen name="sku_image_height">150dp</dimen>
+    <dimen name="sku_add_cart_height">50dp</dimen>
+    <dimen name="sku_add_cart_editor_width">60dp</dimen>
+    <dimen name="sku_accessory_image_width">120dp</dimen>
+    <dimen name="sku_accessory_image_height">120dp</dimen>
     <dimen name="left_margin">6dp</dimen>
     <dimen name="right_margin">6dp</dimen>
     <dimen name="browse_item_height">42dp</dimen>
