--- a/app/src/main/res/layout/sku_spec_item.xml
+++ b/app/src/main/res/layout/sku_spec_item.xml
@@ -7,6 +7,5 @@
     <TextView android:id="@+id/specName" />
 
     <TextView
-        android:id="@+id/specValue"
-        android:paddingLeft="@dimen/right_margin" />
+        android:id="@+id/specValue" />
 </TableRow>
