--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -20,8 +20,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/right_margin">
+            android:orientation="vertical">
 
             <!-- Photos -->
             <android.support.v4.view.ViewPager
@@ -280,7 +279,6 @@
         <TextView
             android:id="@+id/select_sku"
             android:textSize="@dimen/fontsize_16sp"
-            android:paddingRight="@dimen/right_margin"
             android:text="@string/sku_set_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
