--- a/app/src/main/res/layout/notify_prefs_item.xml
+++ b/app/src/main/res/layout/notify_prefs_item.xml
@@ -9,6 +9,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:textColor="@color/staples_black"
         android:textSize="@dimen/fontsize_18sp"/>
     <Switch
         android:id="@+id/enable"
