--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -15,6 +15,7 @@
 
     <dimen name="verticalspacing_8dp">8dp</dimen>     <!--part of style guide-->
     <dimen name="verticalspacing_24dp">24dp</dimen>   <!--part of style guide-->
+    <dimen name="verticalspacing_16dp">16dp</dimen>   <!--part of style guide-->
     <dimen name="verticalspacing_48dp">48dp</dimen>   <!--part of style guide-->
     <dimen name="verticalspacing_56dp">56dp</dimen>   <!--part of style guide-->
     <dimen name="margin_16dp">16dp</dimen>     <!--part of style guide-->
