--- a/app/src/main/res/layout/personal_feed.xml
+++ b/app/src/main/res/layout/personal_feed.xml
@@ -19,6 +19,7 @@
 
             <!-- Last Seen Products -->
             <LinearLayout
+                android:id="@+id/seen_products_layout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/staples_white"
@@ -41,7 +42,7 @@
                         android:gravity="right|center_vertical"
                         android:padding="@dimen/verticalspacing_8dp"
                         android:text="Clear"/>
-                </LinearLayout>
+                </LinearLayout       >
                 <View
                     android:layout_width="fill_parent"
                     android:layout_height="2dp"
@@ -105,6 +106,7 @@
 
             <!-- Clearance Products in Cart -->
             <LinearLayout
+                android:id="@+id/clearance_layout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/staples_white"
@@ -166,6 +168,7 @@
 
             <!-- Daily Deal Products in Cart -->
             <LinearLayout
+                android:id="@+id/daily_deal_layout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/staples_white"
