--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -53,4 +53,6 @@
     <dimen name="left_margin">6dp</dimen>
     <dimen name="right_margin">6dp</dimen>
     <dimen name="browse_item_height">42dp</dimen>
+    <dimen name="search_horizontal_offset">60dp</dimen>
+    <dimen name="search_negative_horizontal_offset">-60dp</dimen>
 </resources>
