--- a/app/src/main/res/layout/sku_review_full_item.xml
+++ b/app/src/main/res/layout/sku_review_full_item.xml
@@ -22,9 +22,10 @@
     </LinearLayout>
     <TextView
         android:id="@+id/sku_review_title"
-        style="@style/SkuReviewTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/fontsize_16sp"
+        android:textStyle="bold"/>
     <TextView
         android:id="@+id/sku_review_comments"
         android:layout_width="match_parent"
