--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:focusable="true"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="true"
+    android:background="@color/staples_off_white">
 
     <!-- Summary page contents -->
     <ScrollView
@@ -14,36 +15,67 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:scrollbarStyle="outsideOverlay"
-        android:background="@color/staples_white"
-        android:paddingLeft="@dimen/sku_info_padding"
-        android:paddingRight="@dimen/sku_info_padding">
+        android:background="@color/staples_off_white"
+        android:paddingLeft="@dimen/sku_hori_padding"
+        android:paddingRight="@dimen/sku_hori_padding">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Photos -->
-            <android.support.v4.view.ViewPager
-                android:id="@+id/images"
+            <!-- SKU Photos -->
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/sku_image_height"/>
-            <com.staples.mobile.cfa.widget.PagerStripe
-                android:id="@+id/stripe"
-                style="@style/PagerStripe"/>
+                android:layout_height="wrap_content"
+                android:background="@color/staples_white"
+                android:orientation="vertical">
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/images"
+                    android:layout_width="@dimen/sku_image_width"
+                    android:layout_height="@dimen/sku_image_height"
+                    android:layout_gravity="center"
+                    android:paddingTop="@dimen/sku_padding_14"
+                    android:paddingBottom="@dimen/sku_padding_10"
+                    android:background="@color/staples_white"/>
+                <com.staples.mobile.cfa.widget.PagerStripe
+                    android:id="@+id/stripe"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    stripeThickness="2dp"
+                    android:textSize="@dimen/fontsize_12sp"/>
+            </LinearLayout>
 
-            <!-- Info -->
+            <!-- Sku Info Sum -->
             <TextView
                 android:id="@+id/title"
-                style="@style/SkuSummaryTitle"/>
-            <TextView
-                android:id="@+id/numbers"
-                style="@style/SkuNumbers"/>
-            <com.staples.mobile.cfa.widget.RatingStars
-                android:id="@+id/rating"
-                style="@style/LargeRatingStars"/>
-            <com.staples.mobile.cfa.widget.PriceSticker
-                android:id="@+id/pricing"
-                style="@style/LargePriceSticker"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|left"
+                android:textSize="@dimen/fontsize_20sp"
+                android:textColor="@color/staples_black"
+                android:paddingTop="@dimen/sku_padding_14"
+                android:maxLines="3"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="18dp"
+                android:paddingBottom="17dp"
+                android:paddingLeft="@dimen/sku_padding_10"
+                android:paddingRight="@dimen/sku_padding_10">
+                <com.staples.mobile.cfa.widget.PriceSticker
+                    android:id="@+id/pricing"
+                    style="@style/LargePriceSticker"
+                    android:layout_gravity="center_vertical|left"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.1"/>
+                <com.staples.mobile.cfa.widget.RatingStars
+                    android:id="@+id/rating"
+                    style="@style/SmallRatingStars"
+                    android:layout_gravity="center_vertical|right"/>
+            </LinearLayout>
 
             <!-- Shipping Logic -->
             <LinearLayout
@@ -68,16 +100,16 @@
                             style="@style/SkuSummaryHeader"
                             android:paddingLeft="@dimen/elevation_high"
                             android:paddingRight="@dimen/elevation_high"
-                            android:paddingTop="@dimen/sku_info_padding"
-                            android:paddingBottom="@dimen/sku_info_padding"
+                            android:paddingTop="@dimen/sku_hori_padding"
+                            android:paddingBottom="@dimen/sku_hori_padding"
                             android:gravity="left"
                             android:text="@string/overweight"
                             android:textColor="@color/staples_white"/>
                     </LinearLayout>
                     <TextView
                         style="@style/SkuBulletTextStyle"
-                        android:paddingTop="@dimen/sku_info_padding"
-                        android:paddingBottom="@dimen/sku_info_padding"
+                        android:paddingTop="@dimen/sku_hori_padding"
+                        android:paddingBottom="@dimen/sku_hori_padding"
                         android:layout_marginTop="@dimen/elevation_high"
                         android:layout_marginBottom="@dimen/elevation_high"
                         android:textSize="@dimen/fontsize_15sp"
@@ -102,16 +134,16 @@
                             style="@style/SkuSummaryHeader"
                             android:paddingLeft="@dimen/elevation_high"
                             android:paddingRight="@dimen/elevation_high"
-                            android:paddingTop="@dimen/sku_info_padding"
-                            android:paddingBottom="@dimen/sku_info_padding"
+                            android:paddingTop="@dimen/sku_hori_padding"
+                            android:paddingBottom="@dimen/sku_hori_padding"
                             android:gravity="left"
                             android:text="@string/add_on"
                             android:textColor="@color/staples_white"/>
                     </LinearLayout>
                     <TextView
                         style="@style/SkuBulletTextStyle"
-                        android:paddingTop="@dimen/sku_info_padding"
-                        android:paddingBottom="@dimen/sku_info_padding"
+                        android:paddingTop="@dimen/sku_hori_padding"
+                        android:paddingBottom="@dimen/sku_hori_padding"
                         android:layout_marginTop="@dimen/elevation_high"
                         android:layout_marginBottom="@dimen/elevation_high"
                         android:textSize="@dimen/fontsize_15sp"
@@ -121,7 +153,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="0dp"
                     android:background="@color/staples_middle_gray"
                     android:layout_gravity="center"
                     android:layout_marginTop="@dimen/elevation_high"/>
@@ -131,25 +163,45 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="@dimen/verticalspacing_8dp">
+                android:background="@color/staples_white"
+                android:orientation="vertical">
                 <LinearLayout
-                    android:id="@+id/description"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
                     <TextView
                         style="@style/SkuSummaryHeader"
                         android:text="@string/description"/>
                 </LinearLayout>
-                <ImageView
-                    android:id="@+id/description_detail"
-                    android:layout_width="wrap_content"
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/staples_off_white"/>
+                <TextView
+                    android:id="@+id/numbers"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/sku_info_padding"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_chevron_right_black"/>
+                    android:gravity="left|center_vertical"
+                    android:paddingLeft="@dimen/sku_padding_10"
+                    android:textSize="@dimen/fontsize_14sp"
+                    android:textColor="@color/staples_dark_gray"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <LinearLayout
+                        android:id="@+id/description"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical"/>
+                    <ImageView
+                        android:id="@+id/description_detail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/sku_hori_padding"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/ic_chevron_right_black"/>
+                </LinearLayout>
             </LinearLayout>
 
             <!-- Specifications -->
@@ -174,8 +226,8 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_chevron_right_black"
-                    android:paddingLeft="@dimen/sku_info_padding"
-                    android:paddingRight="@dimen/sku_info_padding"
+                    android:paddingLeft="@dimen/sku_hori_padding"
+                    android:paddingRight="@dimen/sku_hori_padding"
                     android:paddingTop="@dimen/verticalspacing_24dp"/>
             </LinearLayout>
 
@@ -199,7 +251,7 @@
                     android:id="@+id/review_detail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/sku_info_padding"
+                    android:padding="@dimen/sku_hori_padding"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_chevron_right_black"/>
             </LinearLayout>
