--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -141,28 +141,6 @@
 	</style>
 
     <!-- Sku styling -->
-
-    <style name="PagerStripe">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="stripeThickness">3dp</item>
-        <item name="android:textSize">@dimen/fontsize_12sp</item>
-    </style>
-
-    <style name="SkuSummaryTitle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textSize">@dimen/fontsize_20sp</item>
-    </style>
-
-    <style name="SkuNumbers">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textSize">@dimen/fontsize_14sp</item>
-    </style>
-
     <style name="SmallProductTitle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -173,42 +151,40 @@
     </style>
 
     <style name="LargePriceSticker">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="majorTextSize">@dimen/fontsize_34sp</item>
+        <item name="majorTextSize">@dimen/fontsize_20sp</item>
         <item name="majorTextColor">@color/staples_red</item>
-        <item name="minorTextSize">@dimen/fontsize_24sp</item>
+        <item name="minorTextSize">@dimen/fontsize_16sp</item>
         <item name="minorTextColor">@color/staples_middle_gray</item>
         <item name="android:gravity">center</item>
     </style>
     <style name="SmallPriceSticker">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="majorTextSize">@dimen/fontsize_18sp</item>
+        <item name="majorTextSize">@dimen/fontsize_16sp</item>
         <item name="majorTextColor">@color/staples_red</item>
         <item name="minorTextSize">@dimen/fontsize_12sp</item>
         <item name="minorTextColor">@color/staples_middle_gray</item>
     </style>
 
-    <style name="LargeRatingStars">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/fontsize_16sp</item>
-        <item name="android:gravity">center</item>
-        <item name="noReviews">@string/no_reviews</item>
-    </style>
     <style name="SmallRatingStars">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/fontsize_10sp</item>
+        <item name="noReviews">@string/no_reviews</item>
     </style>
 
     <style name="SkuSummaryHeader">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">35dp</item>
         <item name="android:textSize">@dimen/fontsize_16sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">true</item>
+        <item name="android:layout_gravity">left|center_vertical</item>
+        <item name="android:gravity">left|center_vertical</item>
+        <item name="android:paddingLeft">@dimen/sku_padding_10</item>
+        <item name="android:textColor">@color/staples_dark_gray</item>
     </style>
 
     <style name="SkuBulletMarkerStyle">
@@ -221,7 +197,7 @@
     <style name="SkuBulletTextStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">@dimen/sku_info_padding</item>
+        <item name="android:padding">@dimen/sku_hori_padding</item>
         <item name="android:textSize">@dimen/fontsize_16sp</item>
     </style>
 
@@ -229,21 +205,12 @@
         <item name="android:textSize">@dimen/margin_16dp</item>
     </style>
     <style name="SkuSpecNameStyle" parent="SkuSpecStyle">
-        <item name="android:paddingLeft">@dimen/sku_info_padding</item>
-        <item name="android:paddingRight">@dimen/sku_info_padding</item>
+        <item name="android:paddingLeft">@dimen/sku_hori_padding</item>
+        <item name="android:paddingRight">@dimen/sku_hori_padding</item>
     </style>
     <style name="SkuSpecValueStyle" parent="SkuSpecStyle">
-        <item name="android:paddingLeft">@dimen/sku_info_padding</item>
-        <item name="android:paddingRight">@dimen/sku_info_padding</item>
-    </style>
-
-    <style name="SkuSpecFont">
-        <item name="android:textSize">@dimen/fontsize_16sp</item>
-    </style>
-
-    <style name="SkuReviewTitle">
-        <item name="android:textSize">@dimen/fontsize_16sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:paddingLeft">@dimen/sku_hori_padding</item>
+        <item name="android:paddingRight">@dimen/sku_hori_padding</item>
     </style>
 
     <!-- Store locator styling -->
