Revert "Sku update 1"
This reverts commit 07c0b280fb71cc8c3eb0d95aaac047fa517b2f50.

--- a/app/src/main/res/layout/sku_paragraph_item.xml
+++ b/app/src/main/res/layout/sku_paragraph_item.xml
@@ -2,6 +2,6 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/sku_hori_padding"
+    android:padding="@dimen/sku_info_padding"
     android:ellipsize="end">
 </TextView>
