--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:background="@color/staples_off_white">
+    android:focusableInTouchMode="true">
 
     <!-- Summary page contents -->
     <ScrollView
@@ -15,67 +14,36 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:scrollbarStyle="outsideOverlay"
-        android:background="@color/staples_off_white"
-        android:paddingLeft="@dimen/sku_hori_padding"
-        android:paddingRight="@dimen/sku_hori_padding">
+        android:background="@color/staples_white"
+        android:paddingLeft="@dimen/sku_info_padding"
+        android:paddingRight="@dimen/sku_info_padding">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- SKU Photos -->
-            <LinearLayout
+            <!-- Photos -->
+            <android.support.v4.view.ViewPager
+                android:id="@+id/images"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/staples_white"
-                android:orientation="vertical">
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/images"
-                    android:layout_width="@dimen/sku_image_width"
-                    android:layout_height="@dimen/sku_image_height"
-                    android:layout_gravity="center"
-                    android:paddingTop="@dimen/sku_padding_14"
-                    android:paddingBottom="@dimen/sku_padding_10"
-                    android:background="@color/staples_white"/>
-                <com.staples.mobile.cfa.widget.PagerStripe
-                    android:id="@+id/stripe"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    stripeThickness="2dp"
-                    android:textSize="@dimen/fontsize_12sp"/>
-            </LinearLayout>
+                android:layout_height="@dimen/sku_image_height"/>
+            <com.staples.mobile.cfa.widget.PagerStripe
+                android:id="@+id/stripe"
+                style="@style/PagerStripe"/>
 
-            <!-- Sku Info Sum -->
+            <!-- Info -->
             <TextView
                 android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical|left"
-                android:textSize="@dimen/fontsize_20sp"
-                android:textColor="@color/staples_black"
-                android:paddingTop="@dimen/sku_padding_14"
-                android:maxLines="3"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="18dp"
-                android:paddingBottom="17dp"
-                android:paddingLeft="@dimen/sku_padding_10"
-                android:paddingRight="@dimen/sku_padding_10">
-                <com.staples.mobile.cfa.widget.PriceSticker
-                    android:id="@+id/pricing"
-                    style="@style/LargePriceSticker"
-                    android:layout_gravity="center_vertical|left"/>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.1"/>
-                <com.staples.mobile.cfa.widget.RatingStars
-                    android:id="@+id/rating"
-                    style="@style/SmallRatingStars"
-                    android:layout_gravity="center_vertical|right"/>
-            </LinearLayout>
+                style="@style/SkuSummaryTitle"/>
+            <TextView
+                android:id="@+id/numbers"
+                style="@style/SkuNumbers"/>
+            <com.staples.mobile.cfa.widget.RatingStars
+                android:id="@+id/rating"
+                style="@style/LargeRatingStars"/>
+            <com.staples.mobile.cfa.widget.PriceSticker
+                android:id="@+id/pricing"
+                style="@style/LargePriceSticker"/>
 
             <!-- Shipping Logic -->
             <LinearLayout
@@ -100,16 +68,16 @@
                             style="@style/SkuSummaryHeader"
                             android:paddingLeft="@dimen/elevation_high"
                             android:paddingRight="@dimen/elevation_high"
-                            android:paddingTop="@dimen/sku_hori_padding"
-                            android:paddingBottom="@dimen/sku_hori_padding"
+                            android:paddingTop="@dimen/sku_info_padding"
+                            android:paddingBottom="@dimen/sku_info_padding"
                             android:gravity="left"
                             android:text="@string/overweight"
                             android:textColor="@color/staples_white"/>
                     </LinearLayout>
                     <TextView
                         style="@style/SkuBulletTextStyle"
-                        android:paddingTop="@dimen/sku_hori_padding"
-                        android:paddingBottom="@dimen/sku_hori_padding"
+                        android:paddingTop="@dimen/sku_info_padding"
+                        android:paddingBottom="@dimen/sku_info_padding"
                         android:layout_marginTop="@dimen/elevation_high"
                         android:layout_marginBottom="@dimen/elevation_high"
                         android:textSize="@dimen/fontsize_15sp"
@@ -134,16 +102,16 @@
                             style="@style/SkuSummaryHeader"
                             android:paddingLeft="@dimen/elevation_high"
                             android:paddingRight="@dimen/elevation_high"
-                            android:paddingTop="@dimen/sku_hori_padding"
-                            android:paddingBottom="@dimen/sku_hori_padding"
+                            android:paddingTop="@dimen/sku_info_padding"
+                            android:paddingBottom="@dimen/sku_info_padding"
                             android:gravity="left"
                             android:text="@string/add_on"
                             android:textColor="@color/staples_white"/>
                     </LinearLayout>
                     <TextView
                         style="@style/SkuBulletTextStyle"
-                        android:paddingTop="@dimen/sku_hori_padding"
-                        android:paddingBottom="@dimen/sku_hori_padding"
+                        android:paddingTop="@dimen/sku_info_padding"
+                        android:paddingBottom="@dimen/sku_info_padding"
                         android:layout_marginTop="@dimen/elevation_high"
                         android:layout_marginBottom="@dimen/elevation_high"
                         android:textSize="@dimen/fontsize_15sp"
@@ -153,7 +121,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="1dp"
                     android:background="@color/staples_middle_gray"
                     android:layout_gravity="center"
                     android:layout_marginTop="@dimen/elevation_high"/>
@@ -163,45 +131,25 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/staples_white"
-                android:orientation="vertical">
+                android:orientation="horizontal"
+                android:paddingTop="@dimen/verticalspacing_8dp">
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:id="@+id/description"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
                     <TextView
                         style="@style/SkuSummaryHeader"
                         android:text="@string/description"/>
                 </LinearLayout>
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/staples_off_white"/>
-                <TextView
-                    android:id="@+id/numbers"
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:id="@+id/description_detail"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="left|center_vertical"
-                    android:paddingLeft="@dimen/sku_padding_10"
-                    android:textSize="@dimen/fontsize_14sp"
-                    android:textColor="@color/staples_dark_gray"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <LinearLayout
-                        android:id="@+id/description"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical"/>
-                    <ImageView
-                        android:id="@+id/description_detail"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/sku_hori_padding"
-                        android:layout_gravity="center_vertical"
-                        android:src="@drawable/ic_chevron_right_black"/>
-                </LinearLayout>
+                    android:padding="@dimen/sku_info_padding"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_chevron_right_black"/>
             </LinearLayout>
 
             <!-- Specifications -->
@@ -226,8 +174,8 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_chevron_right_black"
-                    android:paddingLeft="@dimen/sku_hori_padding"
-                    android:paddingRight="@dimen/sku_hori_padding"
+                    android:paddingLeft="@dimen/sku_info_padding"
+                    android:paddingRight="@dimen/sku_info_padding"
                     android:paddingTop="@dimen/verticalspacing_24dp"/>
             </LinearLayout>
 
@@ -251,7 +199,7 @@
                     android:id="@+id/review_detail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/sku_hori_padding"
+                    android:padding="@dimen/sku_info_padding"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_chevron_right_black"/>
             </LinearLayout>
